5.23.23/README.md
# Minimal app
create package.json
npm install react react-dom next
make folder "pages"
create index.js in pages
add this starter code:
```js
import { useState } from 'react';

function Header({ title }) {
  return <h1>{title ? title : 'Default title'}</h1>;
}

export default function HomePage() {
  const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
  const [likes, setLikes] = useState(0);

  function handleClick() {
    setLikes(likes + 1);
  }

  return (
    <div>
      <Header title="Develop. Preview. Ship. 🚀" />
      <ul>
        {names.map((name) => (
          <li key={name}>{name}</li>
        ))}
      </ul>

      <button onClick={handleClick}>Like ({likes})</button>
    </div>
  );
}

```

add in package.json:
```json
{
"scripts": {
    "dev": "next dev"
},
```

run npm run dev



## Tailwind Setup
- npm install -D tailwindcss postcss autoprefixer

- npx tailwindcss init -p

- in tailwind.config.js: 
```js
/** @type {import('tailwindcss').Config} */
module.exports = {
  content: [
    "./app/**/*.{js,ts,jsx,tsx,mdx}",
    "./pages/**/*.{js,ts,jsx,tsx,mdx}",
    "./components/**/*.{js,ts,jsx,tsx,mdx}",
 
    // Or if using `src` directory:
    "./src/**/*.{js,ts,jsx,tsx,mdx}",
  ],
  theme: {
    extend: {},
  },
  plugins: [],
}
```


- create app/layout.tsx
```js
import type { Metadata } from 'next';
 
// These styles apply to every route in the application
import './globals.css';
 
export const metadata: Metadata = {
  title: 'Create Next App',
  description: 'Generated by create next app',
};
 
export default function RootLayout({
  children,
}: {
  children: React.ReactNode;
}) {
  return (
    <html lang="en">
      <body>{children}</body>
    </html>
  );
}
```



- add to global.css
```css
@tailwind base;
@tailwind components;
@tailwind utilities;
```

Soruces: https://tailwindcss.com/docs/guides/nextjs https://nextjs.org/docs/pages/building-your-application/styling/tailwind-css#importing-styles
